# local-airflow

./: .gitignore  README.md  pyproject.toml
dags/: demo.py
